[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreens/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/shield_silver.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/barHorizontal_red_mid 200.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/glassPanel_200.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/barHorizontal_white_mid 200.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Pies/ButterChickenIdle0.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Pies/MincePieIdle0.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Pies/SteacknCheeseIdle0.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "healthbar_flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/HBoxContainer/HealthBar:texture_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 560.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 560.0
value = 50.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/HealthBar"]

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
alignment = 2

[node name="ButterChicken" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
self_modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 784.0
margin_right = 848.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="MincePie" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
self_modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 852.0
margin_right = 916.0
margin_bottom = 560.0
texture = ExtResource( 7 )

[node name="SteacknCheese" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
self_modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 920.0
margin_right = 984.0
margin_bottom = 560.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/healthbar_flash = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
